@@ -96,6 +96,8 @@ add_dependencies(win32Arduino rapidassist)
 # Add all demos to the project unless the user has specified otherwise.
 option(BUILD_DEMO_PROJECTS "Build all demo projects" ON)
 if(BUILD_DEMO_PROJECTS)
+  add_subdirectory(src/demos/Atomic1)
+  add_subdirectory(src/demos/Atomic2)
   add_subdirectory(src/demos/Constants)
   add_subdirectory(src/demos/Interrupts)
   add_subdirectory(src/demos/MicrosOverflow)
@@ -103,14 +105,18 @@ if(BUILD_DEMO_PROJECTS)
   add_subdirectory(src/demos/Progmem2)
   add_subdirectory(src/demos/Progmem3)
 
-  add_dependencies(Constants win32Arduino)
-  add_dependencies(Interrupts win32Arduino)
+  add_dependencies(Atomic1 win32Arduino)
+  add_dependencies(Atomic2 win32Arduino)
+  add_dependencies(Constants      win32Arduino)
+  add_dependencies(Interrupts     win32Arduino)
   add_dependencies(MicrosOverflow win32Arduino)
-  add_dependencies(Progmem1 win32Arduino)
-  add_dependencies(Progmem2 win32Arduino)
-  add_dependencies(Progmem3 win32Arduino)
+  add_dependencies(Progmem1       win32Arduino)
+  add_dependencies(Progmem2       win32Arduino)
+  add_dependencies(Progmem3       win32Arduino)
 
   set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+  set_target_properties(Atomic1        PROPERTIES FOLDER "Demos")
+  set_target_properties(Atomic2        PROPERTIES FOLDER "Demos")
   set_target_properties(Constants      PROPERTIES FOLDER "Demos")
   set_target_properties(Interrupts     PROPERTIES FOLDER "Demos")
   set_target_properties(MicrosOverflow PROPERTIES FOLDER "Demos")
